tests/fixtures/invalid/round_bool_set.py
# Cannot call round() with Bool, Set[int]
x = round(True, {1, 2, 3})
